@@ -2,6 +2,7 @@ Changes in @NEW@:
   o Client Changes:
     * The update-conary option has been renamed updateconary per
       bugzilla #428
+    * buildPath can be set in contexts
   o Build Changes:
     * Combined the EtcConfig and Config policies, and deprecated
       the EtcConfig policy.
